syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "Core";

package person;

// The greeting service definition.
service Person {
  // Sends a greeting
  rpc SayHello (PersonRequest) returns (Response);

  rpc ServerDataStream (Request) returns (stream ResponseStream);
}

// The request message containing the user's name.
message PersonRequest{
  string name = 1;
  int32 age = 2;
  google.protobuf.BoolValue is_married = 3;
}

// The response message containing the greetings.
message Response {
  string message = 1;
}

message Request {}

message ResponseStream{
  string content = 1;
}